moved process editor to process package, quant. reference again in own section

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -48,7 +48,7 @@
             name="%editors.name.2">
       </editor>
       <editor
-            class="org.openlca.app.editors.ProcessEditor"
+            class="org.openlca.app.processes.ProcessEditor"
             default="false"
             icon="icons/proc_obj.gif"
             id="editors.process"
