--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -37,7 +37,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/joda-time-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.23.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/ojalgo-34.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-blas-1.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.0.0.jar"/>
@@ -62,5 +61,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="libs/bonecp-0.8.0-rc3.jar"/>
+	<classpathentry kind="lib" path="libs/ojalgo-34.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
