switched to olca-eigen

--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -45,8 +45,6 @@ bin.includes = plugin.xml,\
                libs/joda-time-2.2.jar,\
                libs/log4j-1.2.17.jar,\
                libs/mysql-connector-java-5.1.23.jar,\
-               libs/ojalgo-34.0.jar,\
-               libs/olca-blas-1.1.0.jar,\
                libs/olca-ecospold-1-1.0.0.jar,\
                libs/olca-formula-1.0.0.jar,\
                libs/olca-ilcd-1.0.0.jar,\
@@ -76,5 +74,7 @@ bin.includes = plugin.xml,\
                libs/derby-10.10.1.1.jar,\
                libs/guava-14.0.1.jar,\
                libs/bonecp-0.8.0-rc3.jar,\
-               libs/zt-zip-1.6.jar
+               libs/zt-zip-1.6.jar,\
+               libs/olca-eigen-0.1.0.jar,\
+               libs/ojalgo-34.8.jar
 
