--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -166,8 +166,8 @@
 
 		<dependency>
 			<groupId>org.openlca</groupId>
-			<artifactId>olca-blas</artifactId>
-			<version>1.1.0</version>
+			<artifactId>olca-eigen</artifactId>
+			<version>0.1.0</version>
 		</dependency>
 
 		<dependency>
