--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -76,5 +76,6 @@ bin.includes = plugin.xml,\
                libs/bonecp-0.8.0-rc3.jar,\
                libs/zt-zip-1.6.jar,\
                libs/olca-eigen-0.1.0.jar,\
-               libs/ojalgo-34.8.jar
+               libs/ojalgo-34.8.jar,\
+               libs/olca-simapro-csv-1.0.0.jar
 
