set version to beta1

--- a/olca-app-build/build.properties
+++ b/olca-app-build/build.properties
@@ -22,7 +22,7 @@
 openlca_version = 1.4.0
 # the openLCA version + build id that can be used for file names and
 # display but the NSIS build will fail with this version.
-openlca_version_id = 1.4.0_ALPHA_5
+openlca_version_id = 1.4.0_BETA_1
 
 openlcaupdatesiteparam = -Dorg.openlca.core.updatesite=http://nexus.openlca.org/updatesite
 
