--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -219,6 +219,12 @@
 			<artifactId>olca-simapro-csv</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
 
 	</dependencies>
 
