--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -6,6 +6,19 @@
 	<version>1.4.0</version>
 	<packaging>pom</packaging>
 
+	<repositories>
+		<repository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net repository</name>
+			<url>http://download.java.net/maven/2</url>
+		</repository>
+		<repository>
+			<id>osgeo</id>
+			<name>Open Source Geospatial Foundation Repository</name>
+			<url>http://download.osgeo.org/webdav/geotools/</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 
 		<!-- We need an extra build for the POI dependencies as it is not possible 
@@ -205,6 +218,18 @@
 			<artifactId>zt-zip</artifactId>
 			<version>1.6</version>
 			<type>jar</type>
+		</dependency>
+
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-shapefile</artifactId>
+			<version>10.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-swing</artifactId>
+			<version>10.3</version>
 		</dependency>
 
 	</dependencies>
