switched to SWT version of GeoTools

--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -43,7 +43,6 @@ bin.includes = plugin.xml,\
                libs/gt-referencing-10.3.jar,\
                libs/gt-render-10.3.jar,\
                libs/gt-shapefile-10.3.jar,\
-               libs/gt-swing-10.3.jar,\
                libs/guava-14.0.1.jar,\
                libs/httpclient-4.1.1.jar,\
                libs/httpcore-4.1.jar,\
@@ -71,7 +70,6 @@ bin.includes = plugin.xml,\
                libs/jt-zonalstats-1.3.1.jar,\
                libs/jts-1.13.jar,\
                libs/log4j-1.2.17.jar,\
-               libs/miglayout-3.7-swing.jar,\
                libs/mysql-connector-java-5.1.23.jar,\
                libs/ojalgo-34.8.jar,\
                libs/olca-core-1.0.0.jar,\
@@ -102,5 +100,6 @@ bin.includes = plugin.xml,\
                libs/vecmath-1.3.2.jar,\
                libs/xml-apis-1.0.b2.jar,\
                libs/xmlbeans-2.3.0.jar,\
-               libs/zt-zip-1.6.jar
+               libs/zt-zip-1.6.jar,\
+               libs/gt-swt-10.3.jar
 
