--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="libs/gt-swt-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/bcprov-jdk16-1.46.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/bonecp-0.8.0-rc3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.8.3.jar"/>
@@ -25,7 +26,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/gt-referencing-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-render-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-shapefile-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-swing-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/guava-14.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/httpclient-4.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/httpcore-4.1.jar"/>
@@ -53,7 +53,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/jt-zonalstats-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jts-1.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/miglayout-3.7-swing.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.23.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ojalgo-34.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar" sourcepath="/olca-core"/>
