--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -622,12 +622,26 @@
             name="%ilcd.net.export.category.name">
       </category>
       <wizard
+            category="export.category.csv"
+            class="org.openlca.app.wizards.io.CSVExportWizard"
+            icon="icons/simaPro.png"
+            id="wizard.export.csv"
+            name="Processes">
+         <description>
+            Import SimaPro CSV files.
+         </description>
+      </wizard>
+      <wizard
             category="export.category.ilcdnetwork"
             class="org.openlca.app.ilcd_network.ExportWizard"
             icon="icons/network16.png"
             id="org.openlca.ilcd.network.ExportWizard"
             name="%ilcd.net.export.wizard.name">
       </wizard>
+      <category
+            id="export.category.csv"
+            name="SimaPro CSV">
+      </category>
    </extension>
    
    
