--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -11,6 +11,13 @@
 			name="Welcome">      
       </editor>
       <editor
+      		class="org.openlca.app.db.sql.SqlEditor"
+      		default="false"
+      		id="SqlEditor"
+      		name="SQL Query Browser"
+      		icon="icons/sql_16.png">
+      </editor>
+      <editor
             class="org.openlca.app.editors.ActorEditor"
             default="false"
             icon="icons/actor_obj.png"
