generic parameter section; new actor package under editors

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -18,7 +18,7 @@
       		icon="icons/sql_16.png">
       </editor>
       <editor
-            class="org.openlca.app.editors.ActorEditor"
+            class="org.openlca.app.editors.actors.ActorEditor"
             default="false"
             icon="icons/actor_obj.png"
             id="editors.actor"
