--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -19,7 +19,6 @@ bin.includes = plugin.xml,\
                html/,\
                plugin_customization.ini,\
                libs/bcprov-jdk16-1.46.jar,\
-               libs/bonecp-0.8.0-rc3.jar,\
                libs/commons-beanutils-1.8.3.jar,\
                libs/commons-codec-1.5.jar,\
                libs/commons-collections-3.2.1.jar,\
@@ -101,5 +100,6 @@ bin.includes = plugin.xml,\
                libs/xml-apis-1.0.b2.jar,\
                libs/xmlbeans-2.3.0.jar,\
                libs/zt-zip-1.6.jar,\
-               libs/gt-swt-10.3.jar
+               libs/gt-swt-10.3.jar,\
+               libs/bonecp-0.8.0.RELEASE.jar
 
