--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -101,5 +101,6 @@ bin.includes = plugin.xml,\
                libs/xmlbeans-2.3.0.jar,\
                libs/zt-zip-1.6.jar,\
                libs/gt-swt-10.3.jar,\
-               libs/bonecp-0.8.0.RELEASE.jar
+               libs/bonecp-0.8.0.RELEASE.jar,\
+               libs/opencsv-2.3.jar
 
