--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -12,7 +12,6 @@ bin.includes = plugin.xml,\
                OSGI-INF/,\
                OSGI-INF/l10n/,\
                icons/,\
-               schema/,\
                context.xml,\
                splash.bmp,\
                openLCA.product,\
@@ -102,5 +101,5 @@ bin.includes = plugin.xml,\
                libs/zt-zip-1.6.jar,\
                libs/gt-swt-10.3.jar,\
                libs/bonecp-0.8.0.RELEASE.jar,\
-               libs/opencsv-2.3.jar
+               libs/super-csv-2.1.0.jar
 
