fast database creation by using prepared templates

--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -101,5 +101,6 @@ bin.includes = plugin.xml,\
                libs/zt-zip-1.6.jar,\
                libs/gt-swt-10.3.jar,\
                libs/bonecp-0.8.0.RELEASE.jar,\
-               libs/super-csv-2.1.0.jar
+               libs/super-csv-2.1.0.jar,\
+               db_templates/
 
