--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -102,5 +102,14 @@ bin.includes = plugin.xml,\
                libs/gt-swt-10.3.jar,\
                libs/bonecp-0.8.0.RELEASE.jar,\
                libs/super-csv-2.1.0.jar,\
-               db_templates/
+               db_templates/,\
+               libs/common-2.6.0.jar,\
+               libs/commons-jxpath-1.3.jar,\
+               libs/ecore-2.6.1.jar,\
+               libs/gt-graph-10.3.jar,\
+               libs/gt-xsd-core-10.3.jar,\
+               libs/gt-xsd-kml-10.3.jar,\
+               libs/olca-geo-0.0.1.jar,\
+               libs/picocontainer-1.2.jar,\
+               libs/xsd-2.6.0.jar
 
