--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -231,6 +231,12 @@
 			<artifactId>gt-shapefile</artifactId>
 			<version>10.3</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.openlca</groupId>
+			<artifactId>olca-geo</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.geotools</groupId>
