--- a/olca-app-build/buildlinux32bit.properties
+++ b/olca-app-build/buildlinux32bit.properties
@@ -1,6 +1,6 @@
 # see buildLinuxZips.xml for the usage of these properties
 openlcaxmxval = -Xmx1024M
-jre_path = runtime/jre/linux32/jre-7u17-linux-i586
+jre_path = runtime/jre/linux32/jre-8u5-linux-i586.tar
 # jre_version indicates the name of the folder where the JRE is un-packed
-jre_version = jre1.7.0_17
+jre_version = jre1.8.0_05
 xulrunner_path = runtime/xulrunner/linux32/xulrunner-10.0.en-US.linux-i686.tar
