--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -8,7 +8,8 @@
 			class="org.openlca.app.editors.StartPage"
 			default="false"
 			id="olca.StartPage"
-			name="Welcome">      
+			name="Welcome"
+			icon="icons/home_16.gif">      
       </editor>
       <editor
       		class="org.openlca.app.db.sql.SqlEditor"
